overflow table, fixes #5

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -97,15 +97,22 @@ html {
 
 /* Typography */
 .prose-container {
-  @apply prose max-w-none prose-a:text-secondary 
-  prose-p:md:text-justify prose-p:max-w-4xl prose-p:mx-auto
-  prose-li:my-0 prose-ul:pl-10 prose-ul:max-w-4xl prose-ul:mx-auto prose-ol:max-w-4xl prose-ol:mx-auto
-  prose-table:max-w-4xl prose-table:mx-auto
-  prose-headings:max-w-4xl prose-headings:mx-auto 
-  prose-blockquote:max-w-4xl prose-blockquote:mx-auto prose-blockquote:font-serif
+  @apply  max-w-4xl mx-auto prose prose-a:text-secondary 
+  prose-p:md:text-justify 
+  prose-li:my-0 prose-ul:pl-10 prose-blockquote:font-serif
   prose-figure:rounded-xl prose-img:mx-auto
   before:prose-p:content-none after:prose-p:content-none
   prose-h1:font-display prose-h1:font-normal;
+}
+
+.prose-container table {
+  /* borrowed from https://stackoverflow.com/questions/19794211/horizontal-scroll-on-overflow-of-table */
+  display: block;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 0 auto;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .prose-container a {
